# qt-sprite-image-plugin

./: .gitignore  CMakeLists.txt  README.md  create_deb_source.sh  create_pbuilder.sh  deb_utils.sh  install-mime-types.sh  install.sh  rpm_utils.sh  uninstall.sh
deb/: .gitignore
deb/kde4-qspr/debian/: .gitignore  changelog  control  copyright  rules
deb/kde5-qspr/debian/: .gitignore  changelog  control  copyright  rules
deb/qt4-qspr/debian/: .gitignore  changelog  control  copyright  rules
deb/qt5-qspr/debian/: .gitignore  changelog  control  copyright  rules
qspr/: CMakeLists-KDE4.txt  CMakeLists-KDE5.txt  CMakeLists.txt  qspr.desktop  qspr.json  qspr.pro  qspr.xml  qsprhandler.cpp  qsprhandler.h  qsprplugin.cpp  qsprplugin.h  qsprthumbnail.desktop  spritedefs.cpp  spritedefs.h
rpm/: .gitignore  kde4-qspr.spec  kde5-qspr.spec  qt4-qspr.spec  qt5-qspr.spec
services/: qsprthumbnail.desktop
services/qimageioplugins/: hlspr.desktop  qspr.desktop  spr32.desktop
